<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">马甲App</string>
    <string name="app_name_debug">马甲App内测版</string>
    <string name="str_praised_empty_word">暂时还没赞过别人，可以现在去赞～</string>
    <string name="str_empty_my_comments">暂时还没评论过别人，可以现在去评论～</string>
    <string name="str_tb_title_praised">我赞过的</string>
    <string name="str_tb_title_my_stories">我的故事</string>
    <string name="right_read_btn">阅读</string>
    <string name="jmui_create_file_failed">创建文件失败</string>
    <string name="jmui_record_voice_permission_request">若要使用语音功能，请选择允许录音</string>
    <string name="jmui_move_to_cancel_hint">手指上滑，取消发送</string>
    <string name="jmui_record_voice_hint">按住 说话</string>
    <string name="jmui_cancel_record_voice_hint">松开手指，取消发送</string>
    <string name="jmui_sdcard_not_exist_toast">暂无外部存储</string>
    <string name="picker_image_folder">相机胶卷</string>
    <string name="picker_image_send_select">发送（%d）</string>
    <string name="ok">确定</string>
    <string name="btn_send">确定</string>
    <string name="marjar_id">马甲ID</string>
    <string name="logon_in_password">登陆密码</string>
    <string name="bind_phone">手机号绑定</string>
    <string name="bind_others">第三方账号绑定</string>
    <string name="account_wechat">微信</string>
    <string name="account_qq">QQ</string>
    <string name="account_facebook">Facebook</string>
    <string name="account_real_identity">实名认证</string>
    <string name="dialog_tip_unbind">是否解除绑定该账号</string>
    <string name="dialog_tip_bind">是否绑定该账号</string>
    <string name="settings_account">账号</string>
    <string name="settings_account_security">账号和安全</string>
    <string name="settings_common">通用</string>
    <string name="settings_notification">消息推送</string>
    <string name="settings_free_password">开启免密</string>
    <string name="settings_about">关于马甲App</string>
    <string name="settings_update">检查更新</string>
    <string name="settings_logout">退出</string>
    <string name="nav_coupon">马甲劵</string>
    <string name="nav_coupon_details">马甲劵详情</string>
    <string name="coupon_name">请输入名称</string>
    <string name="coupon_code">请输入代号</string>
    <string name="coupon_price">请输入整数</string>
    <string name="coupon_num">请输入发布数量</string>
    <string name="coupon_expiration">年-月-日</string>
    <string name="coupon_describe">请具体描述该券的使用说明，如联系电话、地址、金额限制等</string>
    <string name="coupon_mortgage">抵押费:</string>
    <string name="coupon_wallet">钱包余额:</string>
    <string name="coupon_create">确认创建</string>
    <string name="coupon_text_hint">请认真核对填写信息，一旦确认创建，则无法撤回</string>
    <string name="coupon_details_use">立即使用</string>
    <string name="scan_qrcode_hint">对准二维码，扫一扫核销</string>
    <string name="coupon_details_use_rule">\n 1、全场满十元可用 \n
        2、需要到店后对老板娘说声：你好漂亮！\n
        3、地址：复兴城二楼 \n</string>
    <string name="coupon_show_window">马甲将收取该券发放总价的1%作为抵押，待该券失效后，将全额返回到您的钱包账户中。</string>
    <string name="verified_name">姓名：</string>
    <string name="verified_code">身份证号：</string>
    <string name="verified_name_hint">请输入真实姓名</string>
    <string name="verified_code_hint">请输入身份证号</string>
    <string name="verified_button_sure">认证</string>
    <string name="woman">女</string>
    <string name="unknown">未知</string>
    <string name="gallery_invalid">未找到图库</string>
    <string name="sdcard_not_enough_head_error">SD卡被拔出或存储空间不足</string>
    <string name="sdcard_not_enough_error">存储空间不足</string>
    <string name="picker_image_error">获取图片出错</string>
    <string name="picker_image_preview">预览</string>
    <string name="picker_image_album_loading">相册加载中…</string>
    <string name="picker_image_album_empty">相册中没有图片！</string>
    <string name="picker_image_folder_info">共%d张</string>
    <string name="picker_image_exceed_max_image_select">最多选择%d张图片！</string>
    <string name="unknow_size">未知大小</string>
    <string name="picker_image_preview_original">发送原图</string>
    <string name="picker_image_preview_original_select">发送原图（%s）</string>
    <string name="tool_bar_my_message">消息</string>
    <string name="tool_bar_my_task">我的社区帮</string>
    <string name="toast_no_empty">请输入完整信息</string>
    <string name="cancel">取消</string>
    <string name="dialog_cancel">取消</string>
    <string name="unbind">解绑</string>
    <string name="bound">已绑定</string>
    <string name="unbound">未绑定</string>
    <string name="certified">已认证</string>
    <string name="uncertified">未认证</string>
    <string name="home_btn">进入广场</string>
    <string name="recharge">充值</string>
    <string name="internet_error">网络异常</string>
    <string name="longitude_latitude">东经 00.00° 南纬 00.00°</string>
    <string name="my_task_my_post">帮过我的</string>
    <string name="my_task_my_helped">我帮过的</string>
    <string name="my_task_post_time">发布时间:2018-10-20 10:20</string>
    <string name="my_task_accepted_time">领取时间：2018-10-20 10:20</string>
    <string name="my_task_finish_time">完成时间：2018-10-20 10:20</string>
    <string name="my_task_comfirm_time">确认时间：</string>
    <string name="my_task_cancle_time">取消时间：</string>
    <string name="nav_my_wallet">我的钱包</string>
    <string name="nav_my_message">我的消息</string>
    <string name="nav_feedback">意见反馈</string>
    <string name="nav_setting">设置</string>
    <string name="nav_logout">退出登录</string>
    <string name="nav_my_task">我的社区帮</string>
    <string name="nav_my_coupons">我的马甲劵</string>
    <string name="nav_my_favorited">我的收藏</string>
    <string name="nav_real_identity">实名认证</string>
    <string name="facebook_app_id">351737942088473</string>
    <string name="fb_login_protocol_scheme">fb351737942088473</string>
    <string name="baidu_api_key">UOpGblY5ZfEI5fszsaiLQhgKEogWIQeE</string>
    <string name="headlines">报社头条</string>
    <string name="background_img">背景图片</string>
    <string name="space_introduction">背景介绍</string>
    <string name="str_hint_register_phone">请输入手机号码</string>
    <string name="str_register_hint_pwd">请输入密码(至少6位)</string>
    <string name="str_register_hint_pwd_confirm">请再次输入密码(至少6位)</string>
    <string name="str_register_agree">同意服务条款并注册</string>
    <string name="str_register_agree_terms_service">《马甲App服务条款》</string>
    <string name="str_register_code_input">请输入验证码</string>
    <string name="str_register_code_obtain">获取验证码</string>
    <string name="str_title_tb_login">登录马甲App</string>
    <string name="str_bind_phone">关联手机</string>
    <string name="str_login_pwd">请输入密码</string>
    <string name="str_login_account">请输入手机号</string>
    <string name="str_login_forget">忘记密码？</string>
    <string name="str_dynamic_login">动态密码登录</string>
    <string name="str_normal_login">密码登录</string>
    <string name="str_login_btn_login">登录</string>
    <string name="str_login_btn_register">注册</string>
    <string name="str_txt_login_third">第三方登录</string>
    <string name="str_dialog_logging">登录中...</string>
    <string name="input_type_pwd">1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ.@#$%^*()!,。?</string>
    <string name="str_reset_pwd">请输入新密码</string>
    <string name="str_sure">确定</string>
    <string name="str_friend_home_longtext">长文</string>
    <string name="str_friend_home_drama">大戏</string>
    <string name="str_friend_home_conversation">和TA对话</string>
    <string name="str_story_empty_word">暂时还没发布故事，现在可以去发布~</string>
    <string name="home_rule">1、活动时间：2018年12月30日（00:00:00）至2018年12月31日（23:59:59）\n\n
2、游戏玩法：\n
（1）每次点击未加载“元社区”，均可获得【随机红包奖励】，点击奖励高至3元/每次。\n
（2）闯关成功可获得【好友助力大福包】，福包奖励高至100元。\n
（3）在限定时间内，分享【好友助力大福包】，领取好友助力奖金总和。\n
（4）每关加载区块获得的奖励与分享助力福包奖励，会随着关卡难度增加而大幅提升奖励金额。\n
（5）完成全部关卡，分享新年祝福，获得【新年大红包】，1月1日登录即可领取。\n</string>
    <string name="third_platform">该功能暂不支持安卓8.0系统版本,请升级到更高版本</string>
    <string name="text_join">进入广场与同在该区块的朋友们聊天吧！</string>
    <string name="text_foot_print">您还未加入任何广场喔！快进入广场留下您的足迹吧  ~</string>
    <string name="input_hint">发送消息</string>
    <string name="message_click_hint">点击消息事件</string>
    <string name="message_long_click_hint">长按消息事件</string>
    <string name="avatar_click_hint">头像点击事件</string>
    <string name="rationale_record_voice">需要获取麦克风权限来录音</string>
    <string name="rationale_photo">需要获取相册权限</string>
    <string name="rationale_camera">需要获取相机权限</string>
    <string-array name="messages_array">
        <item>How are you</item>
        <item>Fine. And you?</item>
        <item>Me, too. Is there any news today?</item>
        <item>Yep! I got a news here: boom! Tomorrow is the end of The Walking Dead!</item>
        <item>Are you kidding me?</item>
        <item>Absolutely not!</item>
        <item>Jesus, that\'s crazy</item>
        <item>I thought no one would gonna to make it</item>
        <item>That\'s cruel, I don\'t like it, maybe there is a favourable turn</item>
        <item>Hope so</item>
    </string-array>
    <string-array name="conversation">
        <item>test</item>
        <item>History message 1</item>
        <item>History message 2</item>
        <item>History message 3</item>
        <item>History message 4</item>
        <item>History message 5</item>
        <item>History message 6</item>
        <item>History message 7</item>
        <item>History message 8</item>
        <item>History message 9</item>
        <item>History message 10</item>
    </string-array>
    <string name="title_activity_seting">SetingActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_single_chat">SingleChatActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shequbang">社区帮</string>
    <string name="Load_more">加载更多</string>
    <string name="create_ven">创建马甲券</string>
    <string name="reset_password">重置登录密码</string>
    <string name="set_logo_password">设置新登录密码</string>
    <string name="finish">完成</string>
    <string name="input_phone">输入当前的绑定手机</string>
    <string name="next_step">下一步</string>
    <string name="change_phone">更换绑定手机</string>
    <string name="commit">提交</string>
    <string name="mj_web">马甲官网</string>
    <string name="mj_xieyi">《马甲用户协议》</string>
    <string name="yinsi">《隐私政策》</string>
    <string name="create_m_sq">创建元社区</string>
    <string name="express_time_to">有效期至：</string>
    <string name="get_yi">已领取</string>
    <string name="shengyu">剩余 %s 张</string>
    <string name="get">领取</string>
    <string name="enter_shequ">请输入元社区名称</string>
    <string name="add_meta_c">添加元社区</string>
    <string name="enter_m_name">请输入元社区名称</string>
    <string name="hot_meta">元社区</string>
    <string name="real_name">真实姓名：</string>
    <string name="id_type">证件类型：</string>
    <string name="id_card">身份证</string>
    <string name="id_card_no">证件号：</string>
    <string name="create_vender">创建马甲劵</string>
    <string name="vendour_name">名称:</string>
    <string name="number_s">数量:</string>
    <string name="real_idf">*实名认证</string>
    <string name="change">更换</string>
    <string name="my_">我的</string>
    <string name="Loading">加载中...</string>
    <string name="enter_">进入</string>
    <string name="enter_nn">请输入昵称</string>
    <string name="my_voucher">我的马甲劵</string>
    <string name="scan">扫一扫</string>
    <string name="real_name_not_entity">真实姓名不能为空</string>
    <string name="publish_essay">发布微文</string>
    <string name="publish_long_text">发布长文</string>
    <string name="publish_link">发布链接</string>
    <string name="closed">关闭</string>
    <string name="squre">广场</string>
    <string name="skip_mining_enter">跳过，直接进入矿区</string>
    <string name="share_liji">立即分享</string>
    <string name="my_invitation">我的专属邀请码</string>
    <string name="join_to_wk">邀请三位好友即可开始您的挖矿之旅</string>
    <string name="create_y_code">您的专属邀请码已生成</string>
    <string name="payfor_success">支付成功</string>
</resources>