<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <!--android:icon="@mipmap/my_wallet"-->
    <group android:id="@+id/group_wallet">
        <item
            android:icon="@mipmap/my_wallet_icon"
            android:id="@+id/nav_my_wallet"
            android:title="@string/nav_my_wallet" />
    </group>

    <group android:id="@+id/group_coupon">
        <item
            android:icon="@mipmap/maya_c"
            android:id="@+id/nav_my_coupon"
            android:title="@string/nav_my_coupons"
            android:visible="true" />
    </group>

    <group android:id="@+id/group_Task">
        <item
            android:icon="@mipmap/sheqb_c"
            android:id="@+id/nav_my_task"
            android:title="@string/nav_my_task"
            android:visible="true" />
    </group>

    <group android:id="@+id/group_message">
        <item
            android:icon="@mipmap/my_message_icon"
            android:id="@+id/nav_my_message"
            android:title="@string/nav_my_message" />
    </group>

    <group android:id="@+id/group_favorited">
        <item
            android:id="@+id/nav_my_favorited"
            android:title="@string/nav_my_favorited"
            android:visible="false" />
    </group>

    <group android:id="@+id/group_identity">
        <item
            android:id="@+id/real_identity"
            android:title="@string/nav_real_identity"
            android:visible="false" />
    </group>

    <group android:id="@+id/group_setting">
        <item
            android:icon="@mipmap/setting_icon"
            android:id="@+id/nav_setting"
            android:title="@string/nav_setting" />
    </group>

    <group android:id="@+id/group">
        <item
            android:id="@+id/nav_manage"
            android:title="@string/nav_feedback"
            android:visible="false" />

        <item
            android:id="@+id/nav_logout"
            android:title="@string/nav_logout"
            android:visible="false" />
    </group>
    <group android:id="@+id/bottom">

    </group>
</menu>
