<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:layout_height="match_parent">

    <com.shanchain.data.common.ui.toolBar.ArthurToolBar
        android:id="@+id/tb_register"
        style="@style/style_toolbar"
        app:leftImage="@mipmap/abs_roleselection_btn_back_default"
        app:titleColor="@color/colorTextDefault"
        app:titleText="注册"
        app:titleTextSize="16"/>

    <View style="@style/style_text_line_match"/>

    <LinearLayout
        style="@style/style_obtain_focus"/>

    <EditText
        android:inputType="number"
        android:id="@+id/et_register_phone"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/shape_bg_edit_report"
        android:gravity="center_vertical"
        android:hint="@string/str_hint_register_phone"
        android:lines="1"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/colorTextDefault"
        android:textColorHint="@color/colorLoginHint"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/sp_14"/>


    <RelativeLayout
        android:background="@drawable/shape_bg_edit_report"
        android:layout_width="match_parent"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="@dimen/dimens_15dp"
        android:layout_marginRight="38dp"
        android:layout_height="44dp">

        <TextView
            android:layout_marginTop="@dimen/dimens_5dp"
            android:layout_marginBottom="@dimen/dimens_5dp"
            android:id="@+id/tv_register_code"
            android:text="@string/str_register_code_obtain"
            android:gravity="center"
            android:layout_marginRight="@dimen/dimens_20dp"
            android:textColor="@color/colorTextDefault"
            android:textSize="@dimen/sp_14"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <EditText
            android:textColor="@color/colorTextDefault"
            android:textCursorDrawable="@null"
            android:id="@+id/et_register_code"
            android:lines="1"
            android:inputType="number"
            android:layout_toLeftOf="@id/tv_register_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="@dimen/sp_14"
            android:paddingLeft="@dimen/dimens_20dp"
            android:textColorHint="@color/colorLoginHint"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:hint="@string/str_register_code_input"/>


    </RelativeLayout>


    <EditText
        android:id="@+id/et_register_pwd"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/shape_bg_edit_report"
        android:gravity="center_vertical"
        android:hint="@string/str_register_hint_pwd"
        android:digits="@string/input_type_pwd"
        android:lines="1"
        android:paddingLeft="20dp"
        android:inputType="textPassword"
        android:paddingRight="20dp"
        android:textColor="@color/colorTextDefault"
        android:textColorHint="@color/colorLoginHint"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/sp_14"/>


    <EditText
        android:id="@+id/et_register_pwd_confirm"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"
        android:background="@drawable/shape_bg_edit_report"
        android:gravity="center_vertical"
        android:hint="@string/str_register_hint_pwd_confirm"
        android:lines="1"
        android:digits="@string/input_type_pwd"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/colorTextDefault"
        android:textColorHint="@color/colorLoginHint"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/sp_14"/>

    <Button
        android:id="@+id/btn_register_agree"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_bg_btn_login"
        android:text="@string/str_register_agree"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:id="@+id/tv_register_terms"
        android:layout_marginTop="@dimen/dimens_20dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorActive"
        android:text="@string/str_register_agree_terms_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>
