<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.shanchain.data.common.ui.toolBar.ArthurToolBar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/tb_register"
        style="@style/style_toolbar"
        app:leftImage="@mipmap/abs_roleselection_btn_back_default"
        app:titleColor="@color/colorTextDefault"
        app:titleTextSize="16"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="@mipmap/payfor_bg"
            />
        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:src="@mipmap/payfor_success_icon"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            android:src="@mipmap/app_logo"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/payfor_success"
        android:textSize="16sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:maxLines="2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/create_y_code"
        android:textSize="18sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/join_to_wk"
        android:textSize="15sp"
        />
    <ImageView
        android:id="@+id/iv_scode"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/my_invitation"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tv_code_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="4568721"
        android:textSize="16sp"
        />
    <Button
        android:id="@+id/btn_reset_sure"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_btn_login_selector"
        android:text="@string/share_liji"
        android:textColor="@color/colorWhite"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/tv_go_mining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="25dp"
        android:text="@string/skip_mining_enter"
        android:textSize="14sp"
        />
</LinearLayout>